feat: добавил эндпоинты и модели для работы с упражнениями в API
